--- a/index.html
+++ b/index.html
@@ -4,11 +4,56 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie-edge">
-        <title>Title</title>
-        <link rel="stylesheet" href="screen.css">
+        <title>FAQ - Pan y Sol</title>
+        <link rel="stylesheet" href="tufte.css">
     </head>
     <body>
-        <h1>Heading</h1>
+        <article>
+        <h1>Frequently Asked Questions</h1>
+        <p class="subtitle">Have a question? Here are some that have been asked numerous times by our very own customers!</p>
+            <div>
+                <h2>What are your opening hours?</h2>
+                <p>Here are the weekly hours:</p>
+                <ul>
+                    <li>Monday to Saturday: 7:30AM - 8:00PM</li>
+                    <li>Sundays: 8:00AM - 3:00PM</li>
+                </ul>
+                <sidenote>**Bakery hours are subject to change during holidays. Please check our website or social media for updates.**</sidenote>
+            </div>
+            <div>
+                <h2>Do you offer delivery service?</h2>
+                <p>Yes, we deliver within Barcelona city limits. You can place your order online or by phone.</p>
+            </div>
+            <div>
+                <h2>Do you have gluten-free and/or vegatarian/vegan options?</h2>
+                <p>Yes, we offer a wide range of gluten-free breads and pastries. Please let us know if you have dietary restrictions when ordering.</p>
+                <p>As for our vegetarian and vegan products, there are several select breads and pastries that abide by those dietary restrictions. Just look for the "V" symbol on our menu if you get stuck.</p>
+            </div>
+            <div>
+                <h2>Can I place a custom order for a special event?</h2>
+                <p>Absolutely! We create custom cakes, pastries, and breads for weddings, birthdays, and other events. To help us and our bakers, please contact us at least 72 hours in advance.</p>
+            </div>
+            <div>
+                <h2>Do you have a refund or exchange policy?</h2>
+                <p>Due to the perishable nature of our products, we can only offer refunds or exchanges if there is an issues with the quality of the item. Please contact us within 24 hours if there is a problem.</p>
+            </div>
+            <div>
+                <h2>Are pets allowed in the bakery?</h2>
+                <p>While pets are not allowed inside of the building, we have an outdoor seating area where pets are more than welcome.</p>
+            </div>
+            <div>
+                <h2>What types of breads and pastries do you offer?</h2>
+                <p>We specialize in traditional Spanish breads such as <i>pan de payés</i> and <i>barra de pan</i>, as well as traditional baked goods like croissants, empanadas, and seasonal pastries. </p>
+            </div>
+        <section>
+            <hr>We appreciate your feedback and opinions very much to help better our business and the service to our customers, whom of which we value very much. If you have any other questions or concerns, please submit them here and we will get back to you as soon as we can.</hr>
+            <section>
+                <form>
+                    <label for="question">Enter your Question Here!</label>
+                    <input type="text" id="question" name="question"><button>Submit</button>
+                </form>
+            </section>
+        </section>
         <script src="index.js"></script>
     </body>
 </html>
