--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie-edge">
         <title>FAQ - Pan y Sol</title>
         <link rel="stylesheet" href="tufte.css">
     </head>
@@ -19,7 +18,9 @@
                         <li>Monday to Saturday: 7:30AM - 8:00PM</li>
                         <li>Sundays: 8:00AM - 3:00PM</li>
                     </ul>
-                    <sidenote>**Bakery hours are subject to change during holidays. Please check our website or social media for updates.**</sidenote>
+                    <div class="danger">
+                        <p>**Bakery hours are subject to change during holidays. Please check our website or social media for updates.**</p>
+                    </div>
                 </div>
             </section>
             <div>
@@ -57,18 +58,17 @@
                 <div>
                     <h2>What types of breads and pastries do you offer?</h2>
                     <p>We specialize in traditional Spanish breads such as <i>pan de payés</i> and <i>barra de pan</i>, as well as traditional baked goods like croissants, empanadas, and seasonal pastries. </p>
-                    <img src="images/empanada.jpg" width="400">
+                    <img src="images/empanada.jpg" alt="Empanadas" width="400">
                 </div>
             </section>
         </article>
         <section>
-            <hr>We appreciate your feedback and opinions very much to help better our business and the service to our customers, whom of which we value very much. If you have any other questions or concerns, please submit them here and we will get back to you as soon as we can.</hr>
-            <section>
-                <form>
-                    <label for="question">Enter your Question Here!</label>
-                    <input type="text" id="question" name="question"><button>Submit</button>
-                </form>
-            </section>
+            <h3>More Feedback</h3>
+            <hr>We appreciate your feedback and opinions very much to help better our business and the service to our customers, whom of which we value very much. If you have any other questions or concerns, please submit them here and we will get back to you as soon as we can.
+            <form>
+                <label for="question">Enter your Question Here!</label>
+                <input type="text" id="question" name="question"><button>Submit</button>
+            </form>
         </section>
         <script src="index.js"></script>
     </body>
